--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <h2>Abeeb Maroof</h2>
+      <h2>Slack Profile</h2>
+      <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
+      <img src="img1.jpg" alt="Abeeb Maroof Olumide" />
+      <p data-testid="currentDayOfTheWeek">
+        Day of the week: <span id="day">Friday</span>
+      </p>
+      <p data-testid="currentUTCTime">UTC Time: <span id="time"></span></p>
+      <p data-testid="myTrack">Track: Frontend Track</p>
+      <a href="#" data-testid="githubURL"> GITHUB </a>
     </div>
     <script src="script.js"></script>
   </body>
