Adding the functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
       <img src="img1.jpg" alt="Abeeb Maroof Olumide" />
       <p data-testid="currentDayOfTheWeek">
-        Day of the week: <span id="day">Friday</span>
+        Day of the week: <span id="day"></span>
       </p>
       <p data-testid="currentUTCTime">UTC Time: <span id="time"></span></p>
       <p data-testid="myTrack">Track: Frontend Track</p>
