--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
       </p>
       <p data-testid="currentUTCTime">UTC Time: <span id="time"></span></p>
       <p data-testid="myTrack">Track: Frontend Track</p>
-      <a href="#" data-testid="githubURL"> GITHUB </a>
+      <button class="btn">
+        <a
+          href="https://github.com/abeeebdon/HNG-internship1.git"
+          data-testid="githubURL"
+        >
+          GITHUB
+        </a>
+      </button>
     </div>
     <script src="script.js"></script>
   </body>
