--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   </head>
   <body>
     <div class="container">
-      <h2>Slack Profile</h2>
       <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
-      <img src="img1.jpg" alt="Abeeb Maroof Olumide" />
+      <img
+        src="img1.jpg"
+        alt="Abeeb Maroof Olumide"
+        data-testid="slackDisplayImage"
+      />
       <p data-testid="currentDayOfTheWeek">
         Day of the week: <span id="day"></span>
       </p>
-      <p data-testid="currentUTCTime">UTC Time: <span id="time"></span></p>
+      <p data-testid="currentUTCTime" id="time"></p>
       <p data-testid="myTrack">Track: Frontend Track</p>
       <button class="btn">
         <a
