--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>HNG profile</title>
+    <title>HNG Stage 1 Task</title>
   </head>
   <body>
     <div class="container">
+      <div class="image">
+        <img
+          src="img1.jpg"
+          alt="Abeeb Maroof Olumide"
+          data-testid="slackDisplayImage"
+        />
+      </div>
       <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
-      <img
-        src="img1.jpg"
-        alt="Abeeb Maroof Olumide"
-        data-testid="slackDisplayImage"
-      />
       <p data-testid="currentDayOfTheWeek">
         Day of the week: <span id="day"></span>
       </p>
-      <p data-testid="currentUTCTime" id="time"></p>
-      <p data-testid="myTrack">Track: Frontend Track</p>
-      <button class="btn">
-        <a
-          href="https://github.com/abeeebdon/HNG-internship1.git"
-          data-testid="githubURL"
-        >
-          GITHUB
-        </a>
-      </button>
+      <p data-testid="currentUTCTime">UTC time : <span id="time"></span></p>
+      <p data-testid="myTrack">Frontend Track</p>
+      <a
+        href="https://github.com/abeeebdon/HNG-internship1.git"
+        data-testid="githubURL"
+      >
+        Github Profile
+      </a>
     </div>
     <script src="script.js"></script>
   </body>
