--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
   </head>
   <body>
     <div class="container">
-      <div class="image">
-        <img
-          src="img1.jpg"
-          alt="Abeeb Maroof Olumide"
-          data-testid="slackDisplayImage"
-        />
-      </div>
+      <img
+        src="img1.jpg"
+        alt="Abeeb Maroof Olumide"
+        data-testid="slackDisplayImage"
+      />
       <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
       <p data-testid="currentDayOfTheWeek">
         Day of the week: <span id="day"></span>
       </p>
-      <p data-testid="currentUTCTime">UTC time : <span id="time"></span></p>
+      <p data-testid="currentUTCTime" id="time"></p>
       <p data-testid="myTrack">Frontend Track</p>
       <a
         href="https://github.com/abeeebdon/HNG-internship1.git"
