--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
         data-testid="slackDisplayImage"
       />
       <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
-      <p data-testid="currentDayOfTheWeek">
-        Day of the week: <span id="day"></span>
-      </p>
+      <p data-testid="currentDayOfTheWeek" id="day"></p>
       <p data-testid="currentUTCTime" id="time"></p>
       <p data-testid="myTrack">Frontend Track</p>
       <a
         href="https://github.com/abeeebdon/HNG-internship1.git"
-        data-testid="githubURL"
+        data-testid="gitHubURL"
       >
         Github Profile
       </a>
