--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>HNG Stage 1 Task</title>
   </head>
   <body>
     <div class="container">
-      <img
-        src="img1.jpg"
-        alt="Abeeb Maroof Olumide"
-        data-testid="slackDisplayImage"
-      />
-      <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
-      <p data-testid="currentDayOfTheWeek" id="day"></p>
-      <p data-testid="currentUTCTime" id="time"></p>
-      <p data-testid="myTrack">Frontend Track</p>
-      <a
-        href="https://github.com/abeeebdon/HNG-internship1.git"
-        data-testid="gitHubURL"
-      >
-        Github Profile
-      </a>
+      <header>
+        <img
+          src="img1.jpg"
+          alt="Abeeb Maroof Olumide"
+          data-testid="slackDisplayImage"
+        />
+      </header>
+      <main>
+        <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
+        <p data-testid="currentDayOfTheWeek" id="day"></p>
+        <p data-testid="currentUTCTime" id="time"></p>
+        <p data-testid="myTrack">Frontend</p>
+        <a
+          href="https://github.com/abeeebdon/HNG-internship1.git"
+          data-testid="githubURL"
+          target="_blank"
+        >
+          Github Profile
+        </a>
+      </main>
     </div>
-    <script src="script.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
