--- a/index.html
+++ b/index.html
@@ -3,76 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Tech Goals for the Next 2 Years</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./main.css" />
+    <title>HNG Stage 1 Task</title>
   </head>
   <body>
     <div class="container">
-      <h1 data-testid="slackDisplayName">Abeeb<span id="title">don </span></h1>
-      <div class="image">
-        <img
-          data-testid="slackProfilePicture"
-          src="./img4.jpeg"
-          alt="My Slack Profile Picture"
-        />
-      </div>
-
-      <p>
-        I am Abeeb Maroof, a frontend developer with specialty in React js,
-        JavaScript, CSS and HTML, Including frameworks and libraries
-      </p>
+      <header>
+        <img src="img1.jpg" alt="abeebdon" data-testid="slackDisplayImage" />
+      </header>
       <main>
-        <div class="heading">
-          <h2>Current Time and Day</h2>
-          <p data-testid="currentTimeUTC">
-            Current Time in UTC: <span id="currentTimeUTC"></span>
-          </p>
-          <p data-testid="currentDay">
-            Current Day of the Week: <span id="currentDay"></span>
-          </p>
-        </div>
-        <div class="contact">
-          <h2>Contact Information</h2>
-          <p data-testid="slackEmail">
-            Slack Email:
-            <a href="mailto:myemail@example.com">abeebdon@gmail.com</a>
-          </p>
-        </div>
-        <div class="links">
-          <h2>Useful Links</h2>
-          <p>
-            To communicate and know more about HNG internship and other
-            resources, Use the link below
-          </p>
-          <ul>
-            <li>
-              <a data-testid="hngLink" href="https://hng.tech/learn"
-                >HNG Learn</a
-              >
-            </li>
-            <li>
-              <a data-testid="keywordLink" href="https://keyword.dog"
-                >Keyword Dog</a
-              >
-            </li>
-            <li>
-              <a data-testid="scrapeanywebLink" href="https://scrapeanyweb.site"
-                >Scrape Any Web</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h2>Tech Goals for the Next 2 Years</h2>
-          <p>
-            My tech goals for the next 2 years are to learn more about web
-            development, artificial intelligence, and cybersecurity. I aim to
-            build more projects and contribute to open-source repositories.
-          </p>
-        </div>
+        <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
+        <p data-testid="currentDayOfTheWeek" id="day"></p>
+        <p data-testid="currentUTCTime" id="time"></p>
+        <p data-testid="myTrack">Frontend</p>
+        <a
+          href="https://github.com/abeeebdon/HNG-internship1.git"
+          data-testid="githubURL"
+          target="_blank"
+        >
+          Github Profile
+        </a>
       </main>
-
-      <script src="./app.js"></script>
     </div>
+    <script src="./main.js"></script>
   </body>
 </html>
