--- a/index.html
+++ b/index.html
@@ -3,28 +3,80 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main.css" />
-    <title>HNG Stage 1 Task</title>
+    <title>My Tech Goals for the Next 2 Years</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
-      <header>
-        <img src="img1.jpg" alt="abeebdon" data-testid="slackDisplayImage" />
-      </header>
-      <main>
-        <p data-testid="slackUserName">Abeeb Maroof Olumide</p>
-        <p data-testid="currentDayOfTheWeek" id="day"></p>
-        <p data-testid="currentUTCTime" id="time"></p>
-        <p data-testid="myTrack">Frontend</p>
-        <a
-          href="https://github.com/abeeebdon/HNG-internship1.git"
-          data-testid="githubURL"
-          target="_blank"
-        >
-          Github Profile
-        </a>
-      </main>
+      <article>
+        <h1 data-testid="slackDisplayName">Abeebdon</h1>
+        <div class="image">
+          <img
+            data-testid="slackProfilePicture"
+            src="./slackImage.jfif"
+            alt="My Slack Profile Picture"
+          />
+        </div>
+      </article>
+      <article style="flex-basis: 100%">
+        <p>
+          I am Abeeb Maroof, a frontend developer with specialty in React js,
+          JavaScript, CSS and HTML, Including frameworks and libraries
+        </p>
+        <main>
+          <div class="heading">
+            <h2>Current Time and Day</h2>
+            <p data-testid="currentTimeUTC">
+              Current Time in UTC: <span id="currentTimeUTC"></span>
+            </p>
+            <p data-testid="currentDay">
+              Current Day of the Week: <span id="currentDay"></span>
+            </p>
+          </div>
+          <div class="contact">
+            <h2>Contact Information</h2>
+            <p data-testid="abeebdon@gmail.com">
+              Slack Email:
+              <a href="mailto:myemail@example.com">abeebdon@gmail.com</a>
+            </p>
+          </div>
+          <div class="links">
+            <h2>Useful Links</h2>
+            <p>
+              To communicate and know more about HNG internship and other
+              resources, Use the link below
+            </p>
+            <ul>
+              <li>
+                <a data-testid="hngLink" href="https://hng.tech/learn"
+                  >HNG Learn</a
+                >
+              </li>
+              <li>
+                <a data-testid="keywordLink" href="https://keyword.dog"
+                  >Keyword Dog</a
+                >
+              </li>
+              <li>
+                <a
+                  data-testid="scrapeanywebLink"
+                  href="https://scrapeanyweb.site"
+                  >Scrape Any Web</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h2>Tech Goals for the Next 2 Years</h2>
+            <p>
+              My tech goals for the next 2 years are to learn more about web
+              development, artificial intelligence, and cybersecurity. I aim to
+              build more projects and contribute to open-source repositories.
+            </p>
+          </div>
+        </main>
+      </article>
     </div>
-    <script src="./main.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
