--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="image">
           <img
             data-testid="slackProfilePicture"
-            src="./slackImage.jfif"
+            src="./assets/slackImage.jfif"
             alt="My Slack Profile Picture"
           />
         </div>
