--- a/index.html
+++ b/index.html
@@ -3,80 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Tech Goals for the Next 2 Years</title>
+    <title>My Profile Card</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="container">
-      <article>
-        <h1 data-testid="slackDisplayName">Abeebdon</h1>
-        <div class="image">
-          <img
-            data-testid="slackProfilePicture"
-            src="./assets/slackImage.jfif"
-            alt="My Slack Profile Picture"
-          />
-        </div>
-      </article>
-      <article style="flex-basis: 100%">
-        <p>
-          I am Abeeb Maroof, a frontend developer with specialty in React js,
-          JavaScript, CSS and HTML, Including frameworks and libraries
+    <div class="card">
+      <img
+        src="./assets/abeeb.jpeg"
+        alt="Your Profile Picture"
+        class="profile-image"
+        data-testid="profilePicture"
+      />
+      <div class="info">
+        <h2 data-testid="fullName">Abeeb Maroof Olumide</h2>
+        <p data-testid="jobTitle">Frontend Developer</p>
+        <p data-testid="shortBio">
+          I am Abeeb Maroof Olumide, a passionate front-end developer with years
+          of experience in creating user-friendly and engaging web experiences.
+          My skills are in HTML, CSS, JavaScript, React JS and React Native, and
+          Next JS. I have excelled in various collaborative environment owing to
+          my great communication and problem solving skills. I am always eager
+          to learn and contribute to innovative projects.
         </p>
-        <main>
-          <div class="heading">
-            <h2>Current Time and Day</h2>
-            <p data-testid="currentTimeUTC">
-              Current Time in UTC: <span id="currentTimeUTC"></span>
-            </p>
-            <p data-testid="currentDay">
-              Current Day of the Week: <span id="currentDay"></span>
-            </p>
+        <p data-testid="currentLocation">Ibadan, Nigeria</p>
+        <p data-testid="emailAddress">Email Address: abeebdon@gmail.com</p>
+        <div>
+          <p>Contact me @</p>
+          <div class="social-links" data-testid="socialLinks">
+            <a href="your-linkedin-profile">Linkedin</a>
+            <a href="your-github-profile">Github</a>
+            <a href="your-twitter-profile">Twitter</a>
           </div>
-          <div class="contact">
-            <h2>Contact Information</h2>
-            <p data-testid="abeebdon@gmail.com">
-              Slack Email:
-              <a href="mailto:myemail@example.com">abeebdon@gmail.com</a>
-            </p>
-          </div>
-          <div class="links">
-            <h2>Useful Links</h2>
-            <p>
-              To communicate and know more about HNG internship and other
-              resources, Use the link below
-            </p>
-            <ul>
-              <li>
-                <a data-testid="hngLink" href="https://hng.tech/learn"
-                  >HNG Learn</a
-                >
-              </li>
-              <li>
-                <a data-testid="keywordLink" href="https://keyword.dog"
-                  >Keyword Dog</a
-                >
-              </li>
-              <li>
-                <a
-                  data-testid="scrapeanywebLink"
-                  href="https://scrapeanyweb.site"
-                  >Scrape Any Web</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h2>Tech Goals for the Next 2 Years</h2>
-            <p>
-              My tech goals for the next 2 years are to learn more about web
-              development, artificial intelligence, and cybersecurity. I aim to
-              build more projects and contribute to open-source repositories.
-            </p>
-          </div>
-        </main>
-      </article>
+        </div>
+
+        <p id="current-time" data-testid="currentTimeUTC"></p>
+      </div>
     </div>
-    <script src="./app.js"></script>
+
+    <script>
+      function updateUTCTime() {
+        const now = new Date()
+        const utcTime = now.toUTCString()
+        document.getElementById('current-time').textContent = utcTime
+      }
+
+      setInterval(updateUTCTime, 1000) // Update in a min
+
+      // You can add an interval to update the time periodically if required (e.g., every minute)
+    </script>
   </body>
 </html>
