Submitting stage 0 at HNG 12

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         <div>
           <p>Contact me @</p>
           <div class="social-links" data-testid="socialLinks">
-            <a href="your-linkedin-profile">Linkedin</a>
-            <a href="your-github-profile">Github</a>
-            <a href="your-twitter-profile">Twitter</a>
+            <a href="https://www.linkedin.com/in/abeebmaroof/" target="_blank"
+              >Linkedin</a
+            >
+            <a href="https://github.com/abeeebdon/" target="_blank">Github</a>
+            <a href="https://x.com/AbeebMaroof" target="_blank">Twitter</a>
           </div>
         </div>
 
