Submitting stage 0 at HNG 12

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <p data-testid="shortBio">
           I am Abeeb Maroof Olumide, a passionate front-end developer with years
           of experience in creating user-friendly and engaging web experiences.
-          My skills are in HTML, CSS, JavaScript, React JS and React Native, and
-          Next JS. I have excelled in various collaborative environment owing to
-          my great communication and problem solving skills. I am always eager
-          to learn and contribute to innovative projects.
+          <br />My skills are in HTML, CSS, JavaScript, React JS and React
+          Native, and Next JS. I have excelled in various collaborative
+          environment owing to my great communication and problem solving
+          skills. I am always eager to learn and contribute to innovative
+          projects.
         </p>
         <p data-testid="currentLocation">Ibadan, Nigeria</p>
         <p data-testid="emailAddress">Email Address: abeebdon@gmail.com</p>
